<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Header"
            android:text="@string/check" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/pobrane"/>

        <TextView
            style="@style/Questions"
            android:text="@string/flag" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/indonesia" />

                <RadioButton
                    style="@style/CheckBoxes" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/finnish" />

                <RadioButton
                    style="@style/CheckBoxes" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/spain" />

                <RadioButton
                    style="@style/CheckBoxes" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/polish" />

                <RadioButton
                    style="@style/CheckBoxes"
                    android:id="@+id/poland"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/Questions"
            android:text="@string/border"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <RadioButton
                    style="@style/CheckBoxes"
                    android:text="@string/border1"/>
                <RadioButton
                    style="@style/CheckBoxes"
                    android:text="@string/border2"/>
                <RadioButton
                    style="@style/CheckBoxes"
                    android:text="@string/border3"
                        android:id="@+id/border"/>
                <RadioButton
                    style="@style/CheckBoxes"
                    android:text="@string/border4"/>
        </RadioGroup>

        <TextView
            style="@style/Questions"
            android:text="@string/capital_question"/>

            <EditText
                 android:id="@+id/capital"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Enter the city name" />

        <TextView
            style="@style/Questions"
            android:text="@string/zubr"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                style="@style/CheckBoxes"
                android:text="@string/bialowieza"
                android:id="@+id/bialowieza"/>
            <RadioButton
                style="@style/CheckBoxes"
                android:text="@string/ojcow"/>
            <RadioButton
                style="@style/CheckBoxes"
                android:text="@string/wolin"/>
            <RadioButton
                    style="@style/CheckBoxes"
                    android:text="@string/bieszczady"/>
        </RadioGroup>

        <TextView
            style="@style/Questions"
            android:text="@string/dishes"/>

            <CheckBox
                style="@style/CheckBoxes"
                android:text="@string/bigos"
                android:id="@+id/bigos"/>

            <CheckBox
                style="@style/CheckBoxes"
                android:text="@string/fish_chips"
                android:id="@+id/fish_chips"/>

            <CheckBox
                style="@style/CheckBoxes"
                android:text="@string/pasta"
                android:id="@+id/pasta"/>

            <CheckBox
                style="@style/CheckBoxes"
                android:text="@string/pierogi"
                android:id="@+id/pierogi"/>

            <CheckBox
                style="@style/CheckBoxes"
                android:text="@string/pancakes"
                android:id="@+id/pancakes"/>

            <CheckBox
                style="@style/CheckBoxes"
                android:text="@string/schabowy"
                android:id="@+id/schabowy"/>

        <TextView
            style="@style/Questions"
            android:text="@string/religion"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                style="@style/CheckBoxes"
                android:text="@string/islam"
                android:id="@+id/islam"/>
            <RadioButton
                style="@style/CheckBoxes"
                android:text="@string/christianity"
                android:id="@+id/christianity"/>
            <RadioButton
                style="@style/CheckBoxes"
                android:text="@string/judaism"
                android:id="@+id/judaism"/>
        </RadioGroup>

        <TextView
            style="@style/Questions"
            android:text="@string/polonez"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                style="@style/CheckBoxes"
                android:text="@string/drink"/>
            <RadioButton
                style="@style/CheckBoxes"
                android:text="@string/plant"/>
            <RadioButton
                style="@style/CheckBoxes"
                android:text="@string/city"/>
            <RadioButton
                style="@style/CheckBoxes"
                android:text="@string/dance"
                android:id="@+id/dance"/>
        </RadioGroup>

        <TextView
            style="@style/Questions"
            android:text="@string/aboutPope"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                style="@style/CheckBoxes"
                android:text="@string/actor"/>
            <RadioButton
                style="@style/CheckBoxes"
                android:text="@string/scientist"/>
            <RadioButton
                style="@style/CheckBoxes"
                android:text="@string/singer"/>
            <RadioButton
                style="@style/CheckBoxes"
                android:text="@string/pope"
                android:id="@+id/pope"/>

        </RadioGroup>

        <Button
            style="@style/Button"
            android:onClick="checkResults"
            android:text="Check Results"/>


    </LinearLayout>

</ScrollView>
